[feature/chat-client] - Chat Client Configuration 방식 적용 예제